--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-14 19:20+0000\n"
+"POT-Creation-Date: 2021-06-14 19:45+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Moy Moussan <moymoussan@gmail.com>, 2021\n"
 "Language-Team: Spanish (https://www.transifex.com/rapidpro/teams/226/es/)\n"
@@ -7111,10 +7111,7 @@ msgstr "Créditos complementarios, gracias por probar %(brand)s."
 #| "            You agreed to the these policies on %(day)s\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"          Confirm your current password to save these changes\n"
-"        "
+msgid "Confirm your current password to save these changes"
 msgstr ""
 "\n"
 "            Aceptaste estas políticas en %(day)s\n"
