--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-14 19:20+0000\n"
+"POT-Creation-Date: 2021-06-14 19:45+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -7105,10 +7105,7 @@ msgstr "Crédits complémentaires, merci d'essayer %(brand)s."
 #| "            You agreed to the these policies on %(day)s\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"          Confirm your current password to save these changes\n"
-"        "
+msgid "Confirm your current password to save these changes"
 msgstr ""
 "\n"
 "            Vous avez accepté ces politiques le %(day)s\n"
