--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-14 19:20+0000\n"
+"POT-Creation-Date: 2021-06-14 19:45+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -7049,10 +7049,7 @@ msgstr ""
 #| "            You agreed to the these policies on %(day)s\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"          Confirm your current password to save these changes\n"
-"        "
+msgid "Confirm your current password to save these changes"
 msgstr ""
 "\n"
 "            Вы согласились с этими политиками %(day)s\n"
