--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-14 19:20+0000\n"
+"POT-Creation-Date: 2021-06-14 19:45+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Ilhasoft <contato@ilhasoft.com.br>, 2021\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -7116,10 +7116,7 @@ msgstr "Créditos complementares, obrigado por testar %(brand)s."
 #| "            You agreed to the these policies on %(day)s\n"
 #| "\n"
 #| "          "
-msgid ""
-"\n"
-"          Confirm your current password to save these changes\n"
-"        "
+msgid "Confirm your current password to save these changes"
 msgstr ""
 "\n"
 "            Você concordou com essas políticas em %(day)s\n"
