--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-15 15:56+0000\n"
+"POT-Creation-Date: 2021-06-15 17:16+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -4043,13 +4043,21 @@ msgstr "Выберите поток"
 
 #, fuzzy
 #| msgid "Group to Join"
-msgid "Group Filtering"
+msgid "Groups To Include"
 msgstr "Группа для Присоединения"
 
-msgid "Optional: trigger only includes contacts in these groups"
+msgid "Trigger will only include contacts in these groups."
 msgstr ""
 
-msgid "Optional: trigger will exclude contacts in these groups"
+#, fuzzy
+#| msgid "Recipients, enter contacts or groups"
+msgid "Optional: Select contact groups"
+msgstr "Получатели, введите контакты или группы"
+
+msgid "Groups To Exclude"
+msgstr ""
+
+msgid "Trigger will exclude contacts in these groups."
 msgstr ""
 
 #, fuzzy
@@ -7716,6 +7724,11 @@ msgstr "Шаблоны синхронизируются с Вашей учетн
 
 msgid "No synced templates at this time."
 msgstr "На данный момент синхронизированные шаблоны отсутствуют."
+
+#, fuzzy
+#~| msgid "Group to Join"
+#~ msgid "Group Filtering"
+#~ msgstr "Группа для Присоединения"
 
 #, fuzzy
 #~| msgid "An active trigger already exists, triggers must be unique for each group"
