Tweak wording again

--- a/locale/fr/LC_MESSAGES/django.po
+++ b/locale/fr/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-15 17:16+0000\n"
+"POT-Creation-Date: 2021-06-15 17:48+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Jesus EKIE <jesus@fehudigital.com>, 2020\n"
 "Language-Team: French (https://www.transifex.com/rapidpro/teams/226/fr/)\n"
@@ -4011,22 +4011,30 @@ msgstr "Le message ne contient que le mot clé"
 msgid "Keyword"
 msgstr "Mot-clé"
 
-msgid "Word to match in the message text"
+#, fuzzy
+#| msgid "Word to match in the message text"
+msgid "Word to match in the message text."
 msgstr "Mot à faire correspondre dans le texte du message"
 
 msgid "Flow"
 msgstr "Flux"
 
-msgid "Which flow will be started"
+#, fuzzy
+#| msgid "Which flow will be started"
+msgid "Which flow will be started."
 msgstr "Quel flux sera démarré"
 
 msgid "Trigger When"
 msgstr "Déclencher quand"
 
-msgid "How to match a message with a keyword"
+#, fuzzy
+#| msgid "How to match a message with a keyword"
+msgid "How to match a message with a keyword."
 msgstr "Comment faire correspondre un message avec un mot clé"
 
-msgid "The associated channel"
+#, fuzzy
+#| msgid "The associated channel"
+msgid "The associated channel."
 msgstr "Le canal associé"
 
 msgid "Select a flow"
@@ -4039,7 +4047,7 @@ msgstr "Groupe à rejoindre"
 
 #, fuzzy
 #| msgid "Optional: Trigger only applies to these groups"
-msgid "Trigger will only include contacts in these groups."
+msgid "Only includes contacts in these groups."
 msgstr "Facultatif: le déclencheur ne s'applique qu'à ces groupes"
 
 #, fuzzy
@@ -4052,7 +4060,7 @@ msgstr ""
 
 #, fuzzy
 #| msgid "Optional: Trigger only applies to these groups"
-msgid "Trigger will exclude contacts in these groups."
+msgid "Excludes contacts in these groups."
 msgstr "Facultatif: le déclencheur ne s'applique qu'à ces groupes"
 
 #, fuzzy
