--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-15 17:16+0000\n"
+"POT-Creation-Date: 2021-06-15 17:48+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Ilhasoft <contato@ilhasoft.com.br>, 2021\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/rapidpro/teams/226/pt_BR/)\n"
@@ -4018,22 +4018,30 @@ msgstr "Mensagem contém apenas a palavra chave"
 msgid "Keyword"
 msgstr "Palavra-chave"
 
-msgid "Word to match in the message text"
+#, fuzzy
+#| msgid "Word to match in the message text"
+msgid "Word to match in the message text."
 msgstr "Palavra para corresponder na mensagem de texto"
 
 msgid "Flow"
 msgstr "Fluxo"
 
-msgid "Which flow will be started"
+#, fuzzy
+#| msgid "Which flow will be started"
+msgid "Which flow will be started."
 msgstr "Que fluxo será iniciado"
 
 msgid "Trigger When"
 msgstr "Disparar Quando"
 
-msgid "How to match a message with a keyword"
+#, fuzzy
+#| msgid "How to match a message with a keyword"
+msgid "How to match a message with a keyword."
 msgstr "Como combinar a mensagem com a palavra-chave"
 
-msgid "The associated channel"
+#, fuzzy
+#| msgid "The associated channel"
+msgid "The associated channel."
 msgstr "O canal associado"
 
 msgid "Select a flow"
@@ -4046,7 +4054,7 @@ msgstr "Grupos para participar"
 
 #, fuzzy
 #| msgid "Optional: Trigger only applies to these groups"
-msgid "Trigger will only include contacts in these groups."
+msgid "Only includes contacts in these groups."
 msgstr "Opcional: Disparadores se aplicam somente à estes grupos"
 
 #, fuzzy
@@ -4059,7 +4067,7 @@ msgstr ""
 
 #, fuzzy
 #| msgid "Optional: Trigger only applies to these groups"
-msgid "Trigger will exclude contacts in these groups."
+msgid "Excludes contacts in these groups."
 msgstr "Opcional: Disparadores se aplicam somente à estes grupos"
 
 #, fuzzy
