--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-16 15:59+0000\n"
+"POT-Creation-Date: 2021-06-16 18:16+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -1890,6 +1890,11 @@ msgstr "Токен API"
 
 msgid "The API token for your integration as provided by Zenvia"
 msgstr ""
+
+#, fuzzy
+#| msgid "Unable to check WhatsApp enterprise account, please check username and password"
+msgid "Unable to check Zenvia account, please check the API token"
+msgstr "Невозможно проверить корпоративный счет WhatsApp, пожалуйста, проверьте имя пользователя и пароль"
 
 msgid "POST Required"
 msgstr "Требуется POST"
